tests/baselines/reference/FunctionDeclaration11_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration11_es6.ts(1,10): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration11_es6.ts (1 errors) ====
    function * yield() {
             ~
!!! error TS9001: Generators are not currently supported.
    }